# epitran

./: .gitignore  AUTHORS  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  convert_readme.sh  index.rst  lezgi-Cyrl.csv  lezgi-Cyrl.txt  ood-Latn-sax.txt  pyproject.toml  setup.py  tests.ipynb
.github/: pull_request_template.md
.github/workflows/: cd.yml  ci.yml  test.yml
docs/: conf.py  index.rst
epitran/: __init__.py  _epitran.py  backoff.py  cedict.py  dictfirst.py  download.py  epihan.py  exceptions.py  flite.py  ligaturize.py  meta.py  ppprocessor.py  puncnorm.py  reromanize.py  rules.py  simple.py  space.py  stripdiacritics.py  test_bengali.py  test_epitran.py  test_farsi.py  test_flite.py  test_hungarian.py  test_punjabi.py  test_sorani.py  test_thai.py  test_vector.py  test_vietnamese.py  tir2pp.py  vector.py  xsampa.py
epitran/data/: arpabet.csv  aze-Cyrl.csv  aze-Latn.csv  ben-Beng.csv  darpabet.csv  deu-Latn-np.csv  deu-Latn.csv  fas-Arab.csv  fra-Latn-np.csv  fra-Latn.csv  hau-Latn.csv  hin-Deva.csv  hun-Latn.csv  ind-Latn.csv  ind.csv  ipa-xsampa.csv  jav.csv  kaz-Cyrl.csv  kaz-Latn.csv  kir-Arab.csv  kir-Cyrl.csv  kir-Latn.csv  kmr-Latn.csv  nld-Latn.csv  orm-Latn.csv  pinyin-to-ipa.txt  puncnorm.csv  rus-Cyrl.csv  sample.json  som-Latn.csv  spa-Latn.csv  tel-Telu.csv  tgk-Cyrl.csv  tha-Thai.csv  tuk-Cyrl.csv  tuk-Latn.csv  tur-Latn.csv  tur-with_attached_suffixes-space.csv  tur-without_attached_suffixes-space.csv  uig-Arab.csv  (+4 more)
epitran/data/bib/: deu-Latn.bib
epitran/data/map/: Goth2Latn.csv  Latn2Goth.csv  aar-Latn.csv  afr-LATN.csv  afr-Latn.csv  aii-Syrc.csv  amh-Ethi-pp.csv  amh-Ethi-red.csv  amh-Ethi.csv  ara-Arab.csv  ava-Cyrl.csv  aze-Cyrl.csv  aze-Latn.csv  ben-Beng-east.csv  ben-Beng-red.csv  ben-Beng.csv  bho-Deva.csv  bur-Mymr.csv  bxk-Latn.csv  cat-Latn.csv  ceb-Latn.csv  ces-Latn.csv  cjy-Latn.csv  ckb-Arab.csv  cmn-Latn.csv  count_phones.py  csb-Latn.csv  cym-Latn.csv  dan-Latn.csv  deu-Latn-nar.csv  deu-Latn-np.csv  deu-Latn.csv  diff_amh_tir.py  epo-Latn.csv  esp-Latn.csv  est-Latn.csv  eus-Latn.csv  fas-Arab.csv  fin-Latn.csv  find_duplicates.py  (+131 more)
epitran/data/post/: afr-LATN.txt  amh-Ethi-red.txt  amh-Ethi.csv  amh-Ethi.txt  ben-Beng-east.txt  ben-Beng-red.txt  ben-Beng.csv  ben-Beng.txt  bho-Deva.txt  bur-Mymr.txt  ces-Latn.txt  cmn-Latn.txt  csb-Latn.txt  cym-Latn.txt  dan-Latn.txt  deu-Latn.txt  esp-Latn.txt  est-Latn.txt  fin-Latn.txt  fra-Latn-p.txt  fra-Latn-rev.txt  fra-Latn.txt  gle-Latn.txt  got-Latn.txt  hak-Latn.txt  hat-Latn-bab.txt  hau-Latn_post.txt  hin-Deva.csv  hin-Deva.txt  hsn-Latn.txt  hun-Latn.txt  ile-Latn.txt  ita-Latn.txt  jav-Latn.txt  jpn-Hira.txt  jpn-Hrgn-red.txt  jpn-Hrgn.txt  jpn-Kana.txt  jpn-Ktkn-red.txt  jpn-Ktkn.txt  (+50 more)
epitran/data/pre/: afr-LATN.txt  aii-Syrc.txt  ara-Arab.txt  ava-Cyrl.txt  cat-Latn.txt  ckb-Arab.csv  ckb-Arab.txt  cmn-Latn.txt  csb-Latn.txt  cym-Latn.txt  dan-Latn.txt  deu-Latn-nar.txt  deu-Latn-np.csv  deu-Latn-np.txt  deu-Latn.csv  deu-Latn.txt  epo-Latn.txt  esp-Latn.txt  est-Latn.txt  fra-Latn-np.csv  fra-Latn-np.txt  fra-Latn-p.txt  fra-Latn-rev.txt  fra-Latn.csv  fra-Latn.txt  fry-Latn.txt  gan-Latn.txt  gle-Latn.txt  glg-Latn.txt  hak-Latn.txt  hau-Latn_pre.txt  hmn-Latn.txt  hsn-Latn.txt  ile-Latn  ilo-Latn.csv  ilo-Latn.txt  ita-Latn.csv  ita-Latn.txt  kan-Knda.txt  lao-Laoo-prereform.txt  (+36 more)
epitran/data/reromanize/: anglocentric.csv  english-tokpisin.csv  uyghur-uzbek.csv
epitran/data/rules/: jyutping-to-ipa-tones.txt  jyutping-to-ipa.txt  pinyin-to-ipa-tones.txt  pinyin-to-ipa.txt
epitran/data/space/: amh-Ethi.csv  deu-Latn.csv  eng-Latn.csv  nld-Latn.csv  punc-Arab.csv  punc-Ethi.csv  punc-Latn.csv  spa-Latn.csv  tir-Ethi.csv
epitran/data/strip/: ita-Latn.csv  kin-Latn.csv  lao-Laoo.csv  saq-Latn.csv  spa-Latn.csv  vie-Latn.csv
epitran/test/: special_test_estonian.py  special_test_flite.py  special_test_french.py  special_test_german.py  special_test_latvian.py  special_test_lithuanian.py  special_test_yue.py  test_afrikaans.py  test_arabic.py  test_bengali.py  test_bhojpuri.py  test_burmese.py  test_chinese.py  test_danish.py  test_dutch.py  test_epitran.py  test_esperanto.py  test_estonian.py  test_farsi.py  test_finnish.py  test_flite.py  test_french.py  test_frisian.py  test_galician.py  test_german.py  test_hindi.py  test_hungarian.py  test_interlingua.py  test_irish.py  test_japanese.py  test_kab_Latn.py  test_kabyle.py  test_kannada.py  test_korean.py  test_lao.py  test_latvian.py  test_lithuanian.py  test_luganda.py  test_malayalam.py  test_nynorsk.py  (+30 more)
